# horariosITAM

./: .gitignore  CNAME  README.md  anuncio.txt  backup.js  boletines.html  cacheCalendarios.sh  calendarios.html  calendariosTemplate.html  clases.js  clases.json  classes.js  comoSeUsa.html  data.js  generar_horarios.js  index.html  main.js  profesores.html  profesores.js  programas.html  pyproject.toml  style.css  test.txt  uiUtils.js  update.ipynb  update.py  update.sh
.github/: auto-update-website.yml
.github/workflows/: auto-update-website.yml  borrar-anuncio.yml  clear-announcement.yml  monitorea.yml  scrap-actualiza-boletines.yml  scrap-calendarios.yml  scrap-fbruta-boletines.yml  scrap-horarios.yml
.ipynb_checkpoints/: cleanUpdate-checkpoint.ipynb
assets/: style.css
assets/boletines/: boletinesTemplate.html
assets/calendarios/: calendariosTemplate.html
boletines/: boletinesTemplate.html
calendarios/: calendariosTemplate.html
js/: classes.js  data.js  dataTemp.js  dataTemp2.js  main.js  profesores.js  profesoresTemp.js  profesoresTemp2.js  uiUtils.js
js/datos/: datos_index.js  datos_profesores.js
proxy/: abiertos.py  abiertos.sh  start_abiertos.sh
shell/: cacheBoletines.sh  cacheCalendarios.sh  crontab.txt
update/: cacheBoletines.py  cacheCalendarios.py  cacheProgamas.py  graceScrapper.py  graceScrapperSecure.py  match_model.ipynb  match_pipeline.pkl  misProfesData.json  misProfesScrapper.py  monitor.py  proxy.py  requirements.txt  update.py  utils.py
update/data/: labelled_matches.csv
update/tests/: test_js_data.py  test_utils.py
